Implemented tooltips on menu items.

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-11-26 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Implemented tooltips on menu items.
+
 	* Nodes are listed in menu interface.
 
 2011-11-25 : Christian Mauduit <ufoot@ufoot.org>
