--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-11-27 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Implemented help and tooltips for menus.
+
 2011-11-26 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Implemented tooltips on menu items.
