--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -400,6 +400,11 @@ Wrapper on lw6gui_menu_select.
 Wrapper on lw6gui_menu_select_esc.
 @end deffn
 
+@subsection c-lw6gui-menu-set-breadcrumbs
+@deffn {C function exported to Guile} @code{c-lw6gui-menu-set-breadcrumbs}
+Wrapper on lw6gui_menu_set_breadcrumbs.
+@end deffn
+
 @subsection c-lw6gui-menu-sync
 @deffn {C function exported to Guile} @code{c-lw6gui-menu-sync}
 Wrapper on lw6gui_menu_sync.
