--- a/liquidwar6/doc/gui-gdoc.texi
+++ b/liquidwar6/doc/gui-gdoc.texi
@@ -432,9 +432,12 @@ Returns a human-readable representation of the keypress.
 @strong{Return value:}  a newly allocated string
 @end deftypefun
 
-@deftypefun {lw6gui_menu_t *} {lw6gui_menu_new} (char * @var{title}, char * @var{esc}, int @var{enable_esc})
+@deftypefun {lw6gui_menu_t *} {lw6gui_menu_new} (char * @var{title}, char * @var{help}, char * @var{esc}, int @var{enable_esc})
 @var{title}:  the string to be displayed, what the user sees. Can be freed after
 the call is done, function will make a copy internally.
+
+@var{help}:  a string introducing the menu, describing what it does,
+giving hints on how to use it.
 
 @var{esc}:  the label to be displayed in the ESC button
 
@@ -482,6 +485,19 @@ an internal copy will be made.
 
 Change the title of the menu. That is to say, its title.
 Use this function to change the title, don't try to access the 
+struct directly. The idea is to have safe memory management.
+
+@strong{Return value:}  none
+@end deftypefun
+
+@deftypefun {void} {lw6gui_menu_set_help} (lw6gui_menu_t * @var{menu}, char * @var{help})
+@var{menu}:  a pointer to the menu.
+
+@var{help}:  the new help, you can free it after calling the function,
+an internal copy will be made. 
+
+Change the help of the menu. That is to say, its help.
+Use this function to change the help, don't try to access the 
 struct directly. The idea is to have safe memory management.
 
 @strong{Return value:}  none
@@ -556,6 +572,18 @@ Scrolls a menu down, used as a callback for mouse wheel down for instance.
 The idea is just to increment the first displayed item index.
 
 @strong{Return value:}  1 if OK, 0 if failed (out of range).
+@end deftypefun
+
+@deftypefun {int} {lw6gui_menu_set_breadcrumbs} (lw6gui_menu_t * @var{menu}, lw6sys_list_t * @var{breadcrumbs})
+@var{menu}:  the menu to scroll
+
+@var{breadcrumbs}:  list of strings containing breadcrumbs
+
+Set the breadcrumbs, that's to say the readable, logical
+path to get to a given menu. This is just eye candy, not
+linked to any logic at this level.
+
+@strong{Return value:}  1 if OK, 0 if failed.
 @end deftypefun
 
 @deftypefun {void} {lw6gui_menu_center} (lw6gui_menu_t * @var{menu}, int @var{position}, int @var{max_displayed_items})
