--- a/liquidwar6/po/fr.po
+++ b/liquidwar6/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: liquidwar6 dev\n"
 "Report-Msgid-Bugs-To: ufoot@ufoot.org\n"
-"POT-Creation-Date: 2011-12-03 15:47+0100\n"
+"POT-Creation-Date: 2011-12-03 16:15+0100\n"
 "PO-Revision-Date: 2008-12-30 21:46+0100\n"
 "Last-Translator: Christian Mauduit <ufoot@ufoot.org>\n"
 "Language-Team: French <traduc@traduc.org>\n"
@@ -595,7 +595,7 @@ msgid ""
 msgstr ""
 
 #: src/scriptpo.c:48
-msgid "Subfolder"
+msgid "Subfolder with ~a maps"
 msgstr ""
 
 #: src/scriptpo.c:49
