--- a/liquidwar6/po/liquidwar6.pot
+++ b/liquidwar6/po/liquidwar6.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: liquidwar6 0.0.12beta\n"
 "Report-Msgid-Bugs-To: ufoot@ufoot.org\n"
-"POT-Creation-Date: 2011-12-03 15:47+0100\n"
+"POT-Creation-Date: 2011-12-03 16:15+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -583,7 +583,7 @@ msgid ""
 msgstr ""
 
 #: src/scriptpo.c:48
-msgid "Subfolder"
+msgid "Subfolder with ~a maps"
 msgstr ""
 
 #: src/scriptpo.c:49
