--- a/liquidwar6/po/nn.po
+++ b/liquidwar6/po/nn.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: liquidwar6\n"
 "Report-Msgid-Bugs-To: ufoot@ufoot.org\n"
-"POT-Creation-Date: 2011-12-03 15:47+0100\n"
+"POT-Creation-Date: 2011-12-03 16:15+0100\n"
 "PO-Revision-Date: 2010-09-09 19:27+0100\n"
 "Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
@@ -596,7 +596,7 @@ msgid ""
 msgstr ""
 
 #: src/scriptpo.c:48
-msgid "Subfolder"
+msgid "Subfolder with ~a maps"
 msgstr ""
 
 #: src/scriptpo.c:49
