--- a/liquidwar6/doc/ker-gdoc.texi
+++ b/liquidwar6/doc/ker-gdoc.texi
@@ -914,6 +914,14 @@ Tells wether a given team is concerned by a team mask.
 @strong{Return value:}  1 if concerned, 0 if not.
 @end deftypefun
 
+@deftypefun {int} {lw6ker_team_mask_color2mask} (int @var{team_color})
+@var{team_color}:  color index
+
+Gives the mask corresponding to a given color.
+
+@strong{Return value:}  bitwise mask.
+@end deftypefun
+
 @deftypefun {int} {lw6ker_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
