--- a/liquidwar6/doc/sim-gdoc.texi
+++ b/liquidwar6/doc/sim-gdoc.texi
@@ -1,3 +1,13 @@
+@deftypefun {void} {lw6sim_print} (lw6sim_results_t * @var{results}, FILE * @var{f})
+@var{results}:  data to print
+
+@var{f}:  file to print data to
+
+Pretty prints results on standard output.
+
+@strong{Return value:}  none.
+@end deftypefun
+
 @deftypefun {void} {lw6sim_results_zero} (lw6sim_results_t * @var{results})
 @var{results}:  out param, will be cleared
 
@@ -43,6 +53,20 @@ for instance if you give 3 as an argument, will run tests with teams
 
 Runs a simulation of several battle/games on the default map using
 different team settings. Will test the most common colors only,
+with the most popular bot.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {int} {lw6sim_simulate_full} (int @var{argc}, char * [] @var{argv}, lw6sim_results_t * @var{results})
+@var{argc}:  argc as passed to @code{main}
+
+@var{argv}:  argv as passed to @code{main}
+
+@var{results}:  out param, results of the simulation
+
+Runs a simulation of several battle/games on the default map using
+different team settings. Will test all colors,
 with the most popular bot.
 
 @strong{Return value:}  1 on success, 0 on failure.
