--- a/liquidwar6/doc/gfx-gdoc.texi
+++ b/liquidwar6/doc/gfx-gdoc.texi
@@ -116,6 +116,44 @@ and background should interact. Or not.
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
 
+@deftypefun {lw6sys_assoc_t *} {lw6gfx_get_backends} (int @var{argc}, char * [] @var{argv})
+@var{argc}:  argc, as passed to @code{main}
+
+@var{argv}:  argv, as passed to @code{main}
+
+List available gfx backends. The hash contains pairs with id and name
+for each backend. The id is the technical key you can use to
+load the backend, the name is something more readable you can display
+in an interface. The backend objects themselves are not instanciated
+by this (in fact, they are, but released on the fly) you need to
+load and initialize them afterwards.
+
+@strong{Return value:}  hash containing id/name pairs.
+@end deftypefun
+
+@deftypefun {lw6gfx_backend_t *} {lw6gfx_create_backend} (int @var{argc}, char * [] @var{argv}, char * @var{name})
+@var{argc}:  argc, as passed to @code{main}
+
+@var{argv}:  argv, as passed to @code{main}
+
+@var{name}:  string containing gfx key, typically got from @code{lw6gfx_get_backends}
+
+Creates a gfx backend, this is just about loading the dynamic
+library if needed, and/or check gfx engine is available, and
+connect to it. It does not perform initialization.
+
+@strong{Return value:}  gfx backend.
+@end deftypefun
+
+@deftypefun {void} {lw6gfx_destroy_backend} (lw6gfx_backend_t * @var{backend})
+@var{backend}:  gfx backend to destroy
+
+Frees the ressources associated to a gfx, which must have been
+properly uninitialized before.
+
+@strong{Return value:}  none.
+@end deftypefun
+
 @deftypefun {int} {lw6gfx_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
