--- a/liquidwar6/doc/ker-gdoc.texi
+++ b/liquidwar6/doc/ker-gdoc.texi
@@ -1,3 +1,13 @@
+@deftypefun {char *} {lw6ker_capture_str} (lw6ker_game_state_t * @var{game_state})
+@var{game_state}:  game state to represent
+
+Gives a string representation, an ASCII capture of the game.
+This representation is suitable for debugging, typically print
+it to a VT100 console.
+
+@strong{Return value:}  dynamically allocated string.
+@end deftypefun
+
 @deftypefun {void} {lw6ker_cursor_reset} (lw6ker_cursor_t * @var{cursor})
 @var{cursor}:  the cursor to reset
 
