--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-06 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Documented modules up to map (alphabetical order).
+
 2011-12-03 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed bug in string reformatting (fixes #34977).
