--- a/liquidwar6/doc/ldr-gdoc.texi
+++ b/liquidwar6/doc/ldr-gdoc.texi
@@ -218,6 +218,18 @@ it will override the existing hints.
 @strong{Return value:}  1 if success, 0 if failed.
 @end deftypefun
 
+@deftypefun {int} {lw6ldr_metadata_read} (lw6map_metadata_t * @var{metadata}, char * @var{dirname})
+@var{metadata}:  structure containting read data (out param)
+
+@var{dirname}:  map dirname (absolute path)
+
+Reads the metadata, will first parse metadata.xml, and if not available
+read README and guess a title from map path. When function returns,
+all fields in structure are non-NULL.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
 @deftypefun {int} {lw6ldr_meta_layer_read} (lw6map_meta_layer_t * @var{meta_layer}, char * @var{filename}, int @var{target_w}, int @var{target_h}, int @var{analog})
 @var{meta_layer}:  the meta layer to read
 
@@ -385,6 +397,91 @@ function @code{lw6ldr_read}.
 @strong{Return value:}  1 if success, 0 if failure.
 @end deftypefun
 
+@deftypefun {void} {lw6ldr_resampler_init} (lw6ldr_resampler_t * @var{resampler}, lw6map_param_t * @var{param}, lw6ldr_hints_t * @var{hints}, int @var{source_w}, int @var{source_h}, int @var{display_w}, int @var{display_h}, float @var{target_ratio}, int @var{bench_value}, int @var{magic_number}, int @var{expected_depth}, float @var{gray_level})
+@var{resampler}:  resampler object to init
+
+@var{param}:  map parameters to use
+
+@var{hints}:  loading hints
+
+@var{source_w}:  width of source map
+
+@var{source_h}:  height of source map
+
+@var{display_w}:  width of source display
+
+@var{display_h}:  height of source display
+
+@var{target_ratio}:  ratio, that is width/height of the target
+
+@var{bench_value}:  rough estimation of this computer power
+
+@var{magic_number}:  arbitrary constant, needed to calibrate speed
+
+@var{expected_depth}:  how thick the map could be (in practice, looks like d in whd)
+
+@var{gray_level}:  used to estimate capacity, 1.0f is white and means many slots
+
+Initializes a resampler. There is wizardry based on the bench, magic number
+map size, gray level. This is bot bullet proof, but has been experience
+driven and is the result of many tries / failures and hopefully successes.
+Might need tuning as the algorithm evolves. This is the very function that
+chooses the actual logical map size.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_resampler_force} (lw6ldr_resampler_t * @var{resampler}, int @var{source_w}, int @var{source_h}, int @var{target_w}, int @var{target_h})
+@var{resampler}:  resampler to set
+
+@var{source_w}:  source map width
+
+@var{source_h}:  source map height
+
+@var{target_w}:  target map width
+
+@var{target_h}:  target map height
+
+Initializes a resampler with hardcoded values, does not
+calibrate according to context, simply set it to rescale
+the size you want.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_resampler_source2target} (lw6ldr_resampler_t * @var{resampler}, int * @var{target_x}, int * @var{target_y}, int @var{source_x}, int @var{source_y})
+@var{target_x}:  target x coordinate (out param)
+
+@var{target_y}:  target y coordinate (out param)
+
+@var{source_x}:  source x coordinate (in param)
+
+@var{source_y}:  source y coordinate (in param)
+
+Transforms from source coordinate to target coordinates.
+Does rounding fine-tuning, it's not a simple integer division.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_resampler_target2source} (lw6ldr_resampler_t * @var{resampler}, int * @var{source_x}, int * @var{source_y}, int @var{target_x}, int @var{target_y})
+@var{source_x}:  source x coordinate (out param)
+
+@var{source_y}:  source y coordinate (out param)
+
+@var{target_x}:  target x coordinate (in param)
+
+@var{target_y}:  target y coordinate (in param)
+
+Transforms from target coordinate to source coordinates.
+Yes, target to source. Target is our final logical map,
+source is what we loaded from disk, here we want to know,
+given a point in the target, where to fetch its data from source.
+Does rounding fine-tuning, it's not a simple integer division.
+
+@strong{Return value:}  none.
+@end deftypefun
+
 @deftypefun {int} {lw6ldr_rules_read} (lw6map_rules_t * @var{rules}, char * @var{dirname})
 @var{dirname}:  the directory of the map
 
@@ -479,6 +576,67 @@ it will override the existing teams.
 Runs the @code{ldr} module test suite.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
+@end deftypefun
+
+@deftypefun {int} {lw6ldr_texture_read} (lw6map_texture_t * @var{texture}, char * @var{dirname}, lw6map_param_t * @var{param}, lw6ldr_hints_t * @var{hints}, int @var{use_texture}, int @var{display_w}, int @var{display_h}, float * @var{ratio}, int * @var{texture_exists}, lw6sys_progress_t * @var{progress})
+@var{texture}:  structure to hold read data
+
+@var{dirname}:  map dirname (absolute path)
+
+@var{param}:  parameters to use
+
+@var{hints}:  loading hints to use
+
+@var{use_texture}:  wether to use texture.png
+
+@var{display_w}:  display width
+
+@var{display_h}:  display height
+
+@var{ratio}:  target width/height factor (out param)
+
+@var{texture_exists}:  true if texture.png is here (out param)
+
+@var{progress}:  progress indicator (in/out param)
+
+Read the texture associated to a map. Pointer to texture must be valid,
+it's modified in-place. The function will automatically figure out
+if texture.png exists or if we must use foreground.png/background.png.
+
+@strong{Return value:}  1 on success, 0 on failure.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_use_defaults} (lw6ldr_use_t * @var{use})
+@var{use}:  struct to initialize
+
+Sets the use structure to its defaults, this structure
+being used to now wether we should use texture, cursor textures,
+rules, hints, style, teams and music.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {void} {lw6ldr_use_clear} (lw6ldr_use_t * @var{use})
+@var{use}:  struct to clear
+
+Clears the use structure, set it to the use nothing mode.
+
+@strong{Return value:}  none.
+@end deftypefun
+
+@deftypefun {int} {lw6ldr_use_set} (lw6ldr_use_t * @var{use}, char * @var{key}, char * @var{value})
+@var{use}:  struct to modify
+
+@var{key}:  key to change (as a string)
+
+@var{value}:  value to set (as a string)
+
+Sets a key to the given value, OK all fields are integer,
+this is just a convenient function to be called in more
+general functions which are fed with those string pointers,
+typically coming from an XML file.
+
+@strong{Return value:}  1 on success, 0 on failure (key not found).
 @end deftypefun
 
 @deftypefun {int} {lw6ldr_use_update} (lw6ldr_use_t * @var{use}, lw6sys_assoc_t * @var{values})
