--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,6 +1,6 @@
 2011-12-06 : Christian Mauduit <ufoot@ufoot.org>
 
-	* Documented modules up to snd (alphabetical order).
+	* Documented all libxyz modules, not perfect, but done.
 
 2011-12-03 : Christian Mauduit <ufoot@ufoot.org>
 
