--- a/liquidwar6/doc/cli-gdoc.texi
+++ b/liquidwar6/doc/cli-gdoc.texi
@@ -22,7 +22,8 @@ Closes a cli, but does not free all ressources.
 Processes the required out-of-band tasks, this typically, for a client,
 includes broadcasting. Depending on parameters passed in oob_data, might
 actually do a broadcast or simply call a given host and see what's the answer.
-A typicall exchange is PING then INFO and finally LIST.
+A typicall exchange is PING then INFO and finally LIST. It's the responsability
+of the client to take the OOB initiative and contact the server.
 
 @strong{Return value:}  1 on success, 0 on failure.
 @end deftypefun
@@ -142,21 +143,6 @@ Returns the list of the default cli backends.
 @strong{Return value:}  comma separated string, must not be freed.
 @end deftypefun
 
-@deftypefun {lw6sys_assoc_t *} {lw6cli_get_backends} (int @var{argc}, char * [] @var{argv})
-@var{argc}:  argc, as passed to @code{main}
-
-@var{argv}:  argv, as passed to @code{main}
-
-List available cli backends. The hash contains pairs with id and name
-for each backend. The id is the technical key you can use to
-load the backend, the name is something more readable you can display
-in an interface. The backend objects themselves are not instanciated
-by this (in fact, they are, but released on the fly) you need to
-load and initialize them afterwards.
-
-@strong{Return value:}  hash containing id/name pairs.
-@end deftypefun
-
 @deftypefun {lw6cli_backend_t *} {lw6cli_create_backend} (int @var{argc}, char * [] @var{argv}, char * @var{name})
 @var{argc}:  argc, as passed to @code{main}
 
@@ -172,11 +158,11 @@ connect to it. It does not perform initialization.
 @end deftypefun
 
 @deftypefun {void} {lw6cli_destroy_backend} (lw6cli_backend_t * @var{backend})
-Creates a cli backend, this is just about loading the dynamic
-library if needed, and/or check cli engine is available, and
-connect to it. It does not perform initialization.
+@var{backend}:  backend to destroy
 
-@strong{Return value:}  cli backend.
+Destroys a cli backend.
+
+@strong{Return value:}  none.
 @end deftypefun
 
 @deftypefun {int} {lw6cli_test} (int @var{mode})
